# django-live-operations

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
design/: README.md
design/specs/: 2026-07-03-live-operations-list-design.md
example/: Makefile  docker-compose.yml  pyproject.toml
example/demo/: models.py  views.py
example/demo/management/commands/: seed_demo.py
example/demo/migrations/: 0002_alter_demoimport_options_demoimport_language.py
example/demo/templates/: base.html
example/demo_project/: asgi.py  settings.py  urls.py
live_operations/: consumers.py  models.py  progress.py  rendering.py  routing.py  runner.py  security.py  views.py
live_operations/management/commands/: run_liveop.py
live_operations/static/live_operations/: live-operations.js
live_operations/templatetags/: live_operations.py
liveops/: testing.py
tests/: models.py  root_urls.py  test_chain.py  test_consumer.py  test_i18n_runtime.py  test_models.py  test_progress_text.py  test_progress_web.py  test_roundtrip.py  test_run_liveop.py  test_runner.py  test_security.py  test_seed_demo.py  test_stages.py  test_static_js.py  test_templatetag.py  test_testing.py  test_views.py  urls.py  views.py
tests/migrations/: 0003_chainopa_language_demoop_language_errorop_language_and_more.py
