[project]
name = "live-ops-demo"
version = "0.1.0"
# Match django-liveops (>=3.11); otherwise uv can't resolve for the 3.10
# portion of the range (django-liveops requires 3.11+).
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
    "channels>=4",
    "channels[daphne]>=4",
    "daphne>=4",
    "django-channels-broadcast",
    "celery>=5",
    "channels-redis>=4",
    # [cli] pulls tqdm so `make demo-text` renders a live progress bar
    # (TextProgress falls back to plain percent prints without it).
    "django-liveops[cli]",
]

[tool.uv.sources]
django-liveops = { path = "..", editable = true }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "demo_project.settings"
pythonpath = ["."]
